--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -50,6 +50,7 @@
             "logoTextTransform": "none",
             "hideLogoTextOnMobile": true,
             "showLanguageButton": true,
+            "showSearchField": false,
             "feedbackLink": "https://link.webropolsurveys.com/...",
             "externalInstructions": false,
             "externalAboutPage": false,
