Add persons perspective

--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -3,7 +3,8 @@
     "rootUrl": "",
     "perspectives": {
         "searchPerspectives": [
-            "directed"
+            "directed",
+            "persons"
         ],
         "onlyInstancePages": [
         ]
