--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -4,6 +4,8 @@
     "perspectives": {
         "searchPerspectives": [
             "directed",
+            "undirected",
+            "consolidated",
             "persons"
         ],
         "onlyInstancePages": [
